--- a/css/style.css
+++ b/css/style.css
@@ -10786,8 +10786,9 @@ textarea.form-control-lg {
 
 body {
   overflow-x: hidden;
-  max-width: 1400px;
+  min-width: 325px;
   margin: auto;
+  user-select: none;
 }
 
 :root {
@@ -10799,7 +10800,8 @@ a {
   text-decoration: none;
 }
 
-button {
+button,
+#resume {
   border: none;
   width: 130px;
   max-width: 130px;
@@ -10810,11 +10812,33 @@ ul {
   padding: 0;
 }
 
+#social {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  width: 325px;
+  max-width: 325px;
+  background-color: #E1E1E1;
+  border-color: #E1E1E1;
+  border-radius: 1rem;
+}
+#social li {
+  transition: all 0.25s linear;
+}
+#social li:hover {
+  opacity: 0.8;
+}
+
 header ul {
   flex: 1;
 }
 header ul a {
   color: var(--dark);
+}
+header ul a li {
+  white-space: nowrap;
 }
 header .letter-name {
   flex: 1;
@@ -10835,7 +10859,7 @@ header .letter-name span {
 header .contact-btn {
   flex: 1;
 }
-header .contact-btn button {
+header .contact-btn a {
   padding: 0.5rem 1rem;
   display: block;
   margin-left: auto;
@@ -10880,7 +10904,7 @@ header .contact-btn button {
 }
 .hero .right {
   position: relative;
-  top: -210px;
+  top: -230px;
   right: -170px;
   transform: scale(1.3) rotate(-5deg);
   z-index: -1;
@@ -10891,124 +10915,161 @@ header .contact-btn button {
   object-fit: cover;
 }
 
-#activities .activity {
-  max-height: calc(100vh - 2rem);
-  min-height: calc(100vh - 2rem);
+#activities {
+  grid-template-areas: "heading heading" "netImg netDesc" "gwText gwImg" "kaoImg gwImg" "kaoImg kaoText" "kaoImg kaoText";
+  gap: 3rem 2rem;
 }
-#activities .activity .image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: 70%;
-  transition: all 0.25s linear;
-  border-radius: 5px;
-  cursor: pointer;
-}
-#activities .activity .image img:hover {
-  opacity: 0.9;
-  animation: slideImg 5s infinite alternate linear;
-}
-@keyframes slideImg {
-  0% {
-    object-position: 0%;
-  }
-  5% {
-    object-position: 5%;
-  }
-  10% {
-    object-position: 10%;
-  }
-  15% {
-    object-position: 15%;
-  }
-  20% {
-    object-position: 20%;
-  }
-  25% {
-    object-position: 25%;
-  }
-  30% {
-    object-position: 30%;
-  }
-  35% {
-    object-position: 35%;
-  }
-  40% {
-    object-position: 40%;
-  }
-  45% {
-    object-position: 45%;
-  }
-  50% {
-    object-position: 50%;
-  }
-  55% {
-    object-position: 55%;
-  }
-  60% {
-    object-position: 60%;
-  }
-  65% {
-    object-position: 65%;
-  }
-  70% {
-    object-position: 70%;
-  }
-  75% {
-    object-position: 75%;
-  }
-  80% {
-    object-position: 80%;
-  }
-  85% {
-    object-position: 85%;
-  }
-  90% {
-    object-position: 90%;
-  }
-  95% {
-    object-position: 95%;
-  }
-  100% {
-    object-position: 100%;
-  }
-}
-#activities .activity .content h2, #activities .activity .content .h2 {
+#activities h2, #activities .h2 {
+  grid-area: heading;
   font-size: 3rem;
   letter-spacing: 5px;
 }
-#activities .activity .content blockquote {
+#activities .image.img_netcompany {
+  grid-area: netImg;
+}
+#activities .image.img_greenwich {
+  grid-area: gwImg;
+}
+#activities .image.img_kao {
+  grid-area: kaoImg;
+}
+#activities .image img {
+  object-fit: contain;
+  object-position: top;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 0.25s linear;
+}
+#activities .image img:hover {
+  opacity: 0.9;
+}
+#activities .desc.img_netcompany {
+  grid-area: netText;
+}
+#activities .desc.img_greenwich {
+  grid-area: gwText;
+}
+#activities .desc.img_kao {
+  grid-area: kaoText;
+}
+#activities .desc blockquote {
   font-size: 1.5rem;
 }
-#activities .activity .content .description p {
+#activities .desc p {
   text-indent: 1.5rem;
   line-height: 1.6;
   text-align: justify;
   display: inline-block;
 }
-#activities .activity .content .description .overlay {
-  background-color: rgba(0, 0, 0, 0.8);
-  opacity: 0.5;
-  position: fixed;
-  inset: 0;
+
+#footer ul li:first-child p {
+  color: #E1E1E1;
+  margin: 0;
+}
+#footer ul li:last-child blockquote {
+  color: #FE5B02;
+  margin: 0;
+}
+
+#certificate {
+  height: 100vh;
+}
+#certificate h2, #certificate .h2 {
+  font-size: 3rem;
+  letter-spacing: 5px;
+}
+#certificate .wrapper {
+  position: relative;
+}
+#certificate .wrapper:before, #certificate .wrapper:after {
+  position: absolute;
+  top: 0;
   z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.25s linear;
-}
-#activities .activity .content .description .overlay iframe {
+  content: "";
   display: block;
-  margin: 2rem auto 0;
-  width: 80%;
-  height: 90vh;
+  width: 1rem;
+  height: 100%;
 }
-#activities .activity .content .description .overlay button {
+#certificate .wrapper:before {
+  left: 0;
+  background: linear-gradient(90deg, #241F21, transparent);
+}
+#certificate .wrapper:after {
+  right: 0;
+  background: linear-gradient(-90deg, #241F21, transparent);
+}
+#certificate .wrapper ul {
+  display: flex;
+  gap: 1rem;
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 8rem);
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: grab;
+}
+#certificate .wrapper ul li img {
+  height: calc(100vh - 10rem);
+}
+
+#eduexp {
+  height: 100vh;
+}
+#eduexp h2, #eduexp .h2 {
+  font-size: 3rem;
+  letter-spacing: 5px;
+}
+#eduexp ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  place-items: center;
+}
+#eduexp ul li img {
+  object-fit: contain;
+  display: block;
+  margin: auto;
+  transition: all 0.25s linear;
+  cursor: pointer;
+  filter: grayscale(1);
+}
+#eduexp ul li img:hover {
+  filter: grayscale(0);
+}
+#eduexp ul li table tr td a iframe {
+  display: none;
+  position: absolute;
+  border: 1px solid #000;
+  width: 400px;
+  height: 400px;
+}
+
+#media {
+  display: none;
+  inset: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.25s linear;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-y: hidden;
+}
+#media iframe {
+  visibility: visible;
+}
+#media.active {
+  opacity: 1;
+  visibility: visible;
   position: fixed;
+  display: flex;
+}
+#media button {
+  width: fit-content;
   top: 1rem;
   right: 1rem;
-  width: fit-content;
-  height: 3rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
