--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,8 +17,9 @@
 
 body {
   overflow-x: hidden;
-  max-width: 1400px;
+  min-width: 325px;
   margin: auto;
+  user-select: none;
 }
 
 // Variables
@@ -33,7 +34,8 @@ a {
   text-decoration: none;
 }
 
-button {
+button,
+#resume {
   border: none;
   width: 130px;
   max-width: 130px;
@@ -44,12 +46,41 @@ ul {
   padding: 0;
 }
 
+@mixin heading2 {
+  font-size: 3rem;
+  letter-spacing: 5px;
+}
+
 // Project
+#social {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  width: 325px;
+  max-width: 325px;
+  background-color: $secondary;
+  border-color: $secondary;
+  border-radius: 1rem;
+
+  li {
+    transition: $transition;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+}
+
 header {
   ul {
     flex: 1;
     a {
       color: var(--dark);
+
+      li {
+        white-space: nowrap;
+      }
     }
   }
   .letter-name {
@@ -71,7 +102,7 @@ header {
 
   .contact-btn {
     flex: 1;
-    button {
+    a {
       padding: 0.5rem 1rem;
       display: block;
       margin-left: auto;
@@ -129,7 +160,7 @@ header {
   }
   .right {
     position: relative;
-    top: -210px;
+    top: -230px;
     right: -170px;
     transform: scale(1.3) rotate(-5deg);
     z-index: -1;
@@ -145,134 +176,205 @@ header {
 }
 
 #activities {
-  .activity {
-    max-height: calc(100vh - 2rem);
-    min-height: calc(100vh - 2rem);
-    .image {
+  grid-template-areas:
+    "heading heading"
+    "netImg netDesc"
+    "gwText gwImg"
+    "kaoImg gwImg"
+    "kaoImg kaoText"
+    "kaoImg kaoText";
+  gap: 3rem 2rem;
+
+  h2 {
+    grid-area: heading;
+    @include heading2();
+  }
+
+  .image {
+    &.img_netcompany {
+      grid-area: netImg;
+    }
+    &.img_greenwich {
+      grid-area: gwImg;
+    }
+    &.img_kao {
+      grid-area: kaoImg;
+    }
+
+    img {
+      object-fit: contain;
+      object-position: top;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: $transition;
+
+      &:hover {
+        opacity: 0.9;
+      }
+    }
+  }
+
+  .desc {
+    &.img_netcompany {
+      grid-area: netText;
+    }
+    &.img_greenwich {
+      grid-area: gwText;
+    }
+    &.img_kao {
+      grid-area: kaoText;
+    }
+
+    blockquote {
+      font-size: 1.5rem;
+    }
+    p {
+      text-indent: 1.5rem;
+      line-height: 1.6;
+      text-align: justify;
+      display: inline-block;
+    }
+  }
+}
+
+#footer {
+  ul {
+    li {
+      &:first-child {
+        p {
+          color: $secondary;
+          margin: 0;
+        }
+      }
+
+      &:last-child {
+        blockquote {
+          color: $primary;
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+#certificate {
+  height: 100vh;
+  h2 {
+    @include heading2();
+  }
+
+  .wrapper {
+    position: relative;
+
+    // Gradient side fade
+
+    &:before,
+    &:after {
+      position: absolute;
+      top: 0;
+      z-index: 1;
+
+      content: "";
+      display: block;
+      width: 1rem;
+      height: 100%;
+    }
+
+    &:before {
+      left: 0;
+      background: linear-gradient(90deg, $info, transparent);
+    }
+
+    &:after {
+      right: 0;
+      background: linear-gradient(-90deg, $info, transparent);
+    }
+
+    ul {
+      display: flex;
+      gap: 1rem;
+      position: relative;
+      width: 100%;
+      height: calc(100vh - 8rem);
+      overflow: hidden;
+      white-space: nowrap;
+      cursor: grab;
+
+      li {
+        img {
+          height: calc(100vh - 10rem);
+        }
+      }
+    }
+  }
+}
+
+// Experiece
+#eduexp {
+  height: 100vh;
+  h2 {
+    @include heading2();
+  }
+  ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    place-items: center;
+    li {
       img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: 70%;
+        object-fit: contain;
+        display: block;
+        margin: auto;
         transition: $transition;
-        border-radius: 5px;
         cursor: pointer;
+        filter: grayscale(1);
 
         &:hover {
-          opacity: 0.9;
-          animation: slideImg 5s infinite alternate linear;
+          filter: grayscale(0);
         }
+      }
 
-        @keyframes slideImg {
-          0% {
-            object-position: 0%;
-          }
-          5% {
-            object-position: 5%;
-          }
-          10% {
-            object-position: 10%;
-          }
-          15% {
-            object-position: 15%;
-          }
-          20% {
-            object-position: 20%;
-          }
-          25% {
-            object-position: 25%;
-          }
-          30% {
-            object-position: 30%;
-          }
-          35% {
-            object-position: 35%;
-          }
-          40% {
-            object-position: 40%;
-          }
-          45% {
-            object-position: 45%;
-          }
-          50% {
-            object-position: 50%;
-          }
-          55% {
-            object-position: 55%;
-          }
-          60% {
-            object-position: 60%;
-          }
-          65% {
-            object-position: 65%;
-          }
-          70% {
-            object-position: 70%;
-          }
-          75% {
-            object-position: 75%;
-          }
-          80% {
-            object-position: 80%;
-          }
-          85% {
-            object-position: 85%;
-          }
-          90% {
-            object-position: 90%;
-          }
-          95% {
-            object-position: 95%;
-          }
-          100% {
-            object-position: 100%;
-          }
+      table {
+        tr td a iframe {
+          display: none;
+          position: absolute;
+          border: 1px solid #000;
+          width: 400px;
+          height: 400px;
         }
       }
     }
+  }
+}
 
-    .content {
-      h2 {
-        font-size: 3rem;
-        letter-spacing: 5px;
-      }
-      blockquote {
-        font-size: 1.5rem;
-      }
-      .description {
-        p {
-          text-indent: 1.5rem;
-          line-height: 1.6;
-          text-align: justify;
-          display: inline-block;
-        }
-        .overlay {
-          background-color: rgba($color: #000000, $alpha: .8);
-          opacity: 0.5;
-          position: fixed;
-          inset: 0;
-          z-index: 1;
-          visibility: hidden;
-          opacity: 0;
-          transition: $transition;
+// MEDIA popup
+#media {
+  display: none;
+  inset: 0;
+  opacity: 0;
+  visibility: hidden;
+  transition: $transition;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba($color: #000000, $alpha: 0.9);
+  overflow-y: hidden;
 
-          iframe {
-            display: block;
-            margin: 2rem auto 0;
-            width: 80%;
-            height: 90vh;
-          }
+  iframe {
+    visibility: visible;
+  }
 
-          button {
-            position: fixed;
-            top: 1rem;
-            right: 1rem;
-            width: fit-content;
-            height: 3rem;
-            font-size: 2rem;
-          }
-        }
-      }
-    }
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    position: fixed;
+    display: flex;
+  }
+
+  button {
+    width: fit-content;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
   }
 }
